--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.5.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
