--- a/api-backend/package.json
+++ b/api-backend/package.json
@@ -4,8 +4,9 @@
   "description": "Games Aviabird",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node server.js",
+    "dev": "nodemon server",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Rohit Kumar",
   "license": "ISC",
